<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniloenriquediazrios.calculadora.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="screen"
            android:padding="20dp"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:text="@string/respuesta"
            android:textAlignment="textEnd"

            android:textAppearance="?android:attr/textAppearanceLarge" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sevenButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="numberClick"
                android:text="@string/_7" />

            <Button
                android:id="@+id/eightButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:text="@string/_8" />

            <Button
                android:id="@+id/nineButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:text="@string/_9" />

            <Button
                android:id="@+id/subtractButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                android:onClick="buttonClick"
                android:text="@string/dividir" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fourButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="numberClick"
                android:text="@string/_4" />

            <Button
                android:id="@+id/fiveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:text="@string/_5" />

            <Button
                android:id="@+id/sixButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:text="@string/_6" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="buttonClick"
                android:text="@string/x" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/oneButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:onClick="numberClick"
                android:text="@string/_1" />

            <Button
                android:id="@+id/twoButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:text="@string/_2" />

            <Button
                android:id="@+id/threeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="numberClick"
                android:text="@string/_3" />

            <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/menos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/zeroButton"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.32"
                android:onClick="numberClick"
                android:text="@string/_0" />

            <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/porcentaje" />

            <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/igual" />

            <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mas" />

        </LinearLayout>
    </LinearLayout>




</android.support.constraint.ConstraintLayout>
